# United-Chat

./: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.github/workflows/: united-chat.yml
public/codes/: default.html
public/styles/: globals.css  tailwind_complete.css  webchat_transitions.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  splashscreen.json
src-tauri/icons/: icon.icns
src-tauri/resources/: twitch_badges.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/chat/: initialize.rs  mod.rs
src-tauri/src/chat/twitch/: auth.rs  get_user.rs  irc.rs  mod.rs  websocket_client.rs
src-tauri/src/chat/twitch/helpers/: auth_helpers.rs  message_processor.rs  mod.rs  ws_server.rs
src-tauri/src/chat/websocket/: mod.rs  start_ws.rs  ws_server.rs
src-tauri/src/chat/youtube/: get_video.rs  mod.rs  polling.rs  state_manager.rs
src-tauri/src/chat/youtube/structs/: message_renderer_structs.rs  mod.rs  youtube_response.rs
src-tauri/src/misc/: mod.rs  setup.rs
src-tauri/src/misc/editor/: default_themes.rs  get_app_url.rs  get_theme.rs  mod.rs  save_theme.rs
src-tauri/src/misc/qol/: check_if_unsaved.rs  error_handling.rs  linking_ais.rs  mod.rs
src/components/component/: ThemeProvider.tsx  component.tsx  layout.tsx
src/components/component/Editor/: Alerts.tsx  AvailableThemes.tsx  ConfigDropdown.tsx  EditorHeader.tsx  PreviewHeader.tsx
src/components/defaults/: default.tsx
src/components/ui/: alert-dialog.tsx  avatar.tsx  button.tsx  card.tsx  checkbox.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  select.tsx  slider.tsx  switch.tsx  table.tsx  tabs.tsx  toast.tsx  toaster.tsx  tooltip.tsx
src/hooks/: use-toast.ts
src/lib/: Tauri.ts  readHtmlFile.ts
src/lib/mocks/: editor_messages.ts
src/pages/: Settings.tsx  _app.tsx  _document.tsx  index.tsx  splashscreen.tsx  webchat.tsx
src/types/: global.d.ts
(+7 files in other folders)
