[package]
name = "united-chat"
version = "0.0.0"
description = "United Chat"
authors = [
    "Nixyan - nixyan@tockanest.com"
]
edition = "2021"
license = "AGPL-3"
readme = "../README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "united_chat_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.3", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.5", features = ["blocking", "multipart"] }
futures = "0.3.30"
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
tokio = { version = "1.39.2", features = ["full"] }
regex = "1.10.6"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
tauri-plugin-shell = "2.0.0-rc.1"
tauri-plugin-dialog = "2.0.0-rc.1"
rand = "0.8.5"
chrono = "0.4.38"
tauri-plugin-deep-link = "2.0.0-rc.1"
dirs = "5.0.1"
tauri-plugin-localhost = "2.0.0-rc.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.0.0-rc.0"
